// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get started (landing page) renders when backend configuration is disabled 1`] = `
<Fragment>
  <div
    className="panel-restrict-width"
  >
    <EuiPageHeader>
      <EuiTitle
        size="l"
      >
        <h1>
          Get started
        </h1>
      </EuiTitle>
      <ExternalLinkButton
        href="#/"
        text="Open in new window"
      />
    </EuiPageHeader>
    <EuiPanel
      paddingSize="l"
    >
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          The OpenSearch security plugin lets you define the API calls that users can make and the data they can access. The most basic configuration consists of these steps.
        </p>
      </EuiText>
      <EuiSpacer
        size="l"
      />
      <EuiSpacer
        size="l"
      />
      <EuiSteps
        steps={
          Array [
            Object {
              "children": <React.Fragment>
                <EuiText
                  color="subdued"
                  size="s"
                >
                  Roles are reusable collections of permissions. The default roles are a great starting point, but you might need to create custom roles that meet your exact needs.
                   
                  <ExternalLink
                    href="https://opensearch.org/docs/latest/security-plugin/access-control/users-roles/#create-roles"
                  />
                </EuiText>
                <EuiSpacer
                  size="m"
                />
                <EuiFlexGroup
                  gutterSize="s"
                >
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="explore-existing-roles"
                      fill={true}
                      onClick={[Function]}
                    >
                      Explore existing roles
                    </EuiButton>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="create-new-role"
                      onClick={[Function]}
                    >
                      Create new role
                    </EuiButton>
                  </EuiFlexItem>
                </EuiFlexGroup>
                <EuiSpacer
                  size="l"
                />
              </React.Fragment>,
              "title": "Create roles",
            },
            Object {
              "children": <React.Fragment>
                <EuiText
                  color="subdued"
                  size="s"
                >
                  After a user successfully authenticates, the security plugin retrieves that user’s roles. You can map roles directly to users, but you can also map them to backend roles.
                   
                  <ExternalLink
                    href="https://opensearch.org/docs/latest/security-plugin/access-control/users-roles/#map-users-to-roles"
                  />
                </EuiText>
                <EuiSpacer
                  size="m"
                />
                <EuiFlexGroup
                  gutterSize="s"
                >
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="map-users-to-role"
                      fill={true}
                      onClick={[Function]}
                    >
                      Map users to a role
                    </EuiButton>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="create-internal-user"
                      onClick={[Function]}
                    >
                      Create internal user
                    </EuiButton>
                  </EuiFlexItem>
                </EuiFlexGroup>
              </React.Fragment>,
              "title": "Map users",
            },
          ]
        }
      />
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Configure audit logs
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Audit logs let you track user access to your OpenSearch cluster and are useful for compliance purposes."
            id="audit.logs.introduction"
            values={Object {}}
          />
           
          <ExternalLink
            href="https://opensearch.org/docs/latest/security-plugin/audit-logs/"
          />
        </p>
        <EuiButton
          data-test-subj="review-audit-log-configuration"
          fill={true}
          onClick={[Function]}
        >
          Review Audit Log Configuration
        </EuiButton>
      </EuiText>
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Purge cache
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          By default, the security plugin caches authenticated users, along with their roles and permissions. This option will purge cached users, roles and permissions.
        </p>
        <EuiButton
          fill={true}
          iconType="refresh"
          onClick={[Function]}
        >
          Purge cache
        </EuiButton>
      </EuiText>
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Multi-tenancy
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          By default tenancy is activated in Dashboards. Tenants in OpenSearch Dashboards are spaces for saving index patterns, visualizations, dashboards, and other OpenSearch Dashboards objects.
        </p>
        <EuiFlexGroup
          gutterSize="s"
        >
          <EuiFlexItem
            grow={false}
          >
            <EuiButton
              fill={true}
              onClick={[Function]}
            >
              Manage Multi-tenancy
            </EuiButton>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <EuiButton
              onClick={[Function]}
            >
              Configure Multi-tenancy
            </EuiButton>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
    </EuiPanel>
  </div>
</Fragment>
`;

exports[`Get started (landing page) renders when backend configuration is enabled 1`] = `
<Fragment>
  <div
    className="panel-restrict-width"
  >
    <EuiPageHeader>
      <EuiTitle
        size="l"
      >
        <h1>
          Get started
        </h1>
      </EuiTitle>
      <ExternalLinkButton
        href="#/"
        text="Open in new window"
      />
    </EuiPageHeader>
    <EuiPanel
      paddingSize="l"
    >
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          The OpenSearch security plugin lets you define the API calls that users can make and the data they can access. The most basic configuration consists of these steps.
        </p>
      </EuiText>
      <EuiSpacer
        size="l"
      />
      <div
        className="text-center"
      >
        <EuiImage
          alt="Three steps to set up your security"
          size="xl"
          style={
            Object {
              "height": "auto",
              "maxWidth": "100%",
              "width": "auto",
            }
          }
          url="test-file-stub"
        />
      </div>
      <EuiSpacer
        size="l"
      />
      <EuiSteps
        steps={
          Array [
            Object {
              "children": <React.Fragment>
                <EuiText
                  color="subdued"
                  size="s"
                >
                  Add authentication
                  <EuiCode>
                    (authc)
                  </EuiCode>
                  and authorization
                  <EuiCode>
                    (authz)
                  </EuiCode>
                  information to
                  <EuiCode>
                    config/opensearch-security/config.yml
                  </EuiCode>
                  . The
                  <EuiCode>
                    authc
                  </EuiCode>
                   section contains the backends to check user credentials against. The 
                  <EuiCode>
                    authz
                  </EuiCode>
                  section contains any backends to fetch backend roles from. The most common example of a backend role is an LDAP group. 
                  <ExternalLink
                    href="https://opensearch.org/docs/latest/security-plugin/configuration/concepts/"
                  />
                </EuiText>
                <EuiSpacer
                  size="m"
                />
                <EuiFlexGroup
                  gutterSize="s"
                  wrap={true}
                >
                  <EuiFlexItem
                    grow={false}
                  >
                    <ExternalLinkButton
                      fill={true}
                      href="https://opensearch.org/docs/latest/security-plugin/configuration/configuration/"
                      text="Create config.yml"
                    />
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="review-authentication-and-authorization"
                      onClick={[Function]}
                    >
                      Review authentication and authorization
                    </EuiButton>
                  </EuiFlexItem>
                </EuiFlexGroup>
                <EuiSpacer
                  size="l"
                />
              </React.Fragment>,
              "title": "Add backends",
            },
            Object {
              "children": <React.Fragment>
                <EuiText
                  color="subdued"
                  size="s"
                >
                  Roles are reusable collections of permissions. The default roles are a great starting point, but you might need to create custom roles that meet your exact needs.
                   
                  <ExternalLink
                    href="https://opensearch.org/docs/latest/security-plugin/access-control/users-roles/#create-roles"
                  />
                </EuiText>
                <EuiSpacer
                  size="m"
                />
                <EuiFlexGroup
                  gutterSize="s"
                >
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="explore-existing-roles"
                      fill={true}
                      onClick={[Function]}
                    >
                      Explore existing roles
                    </EuiButton>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="create-new-role"
                      onClick={[Function]}
                    >
                      Create new role
                    </EuiButton>
                  </EuiFlexItem>
                </EuiFlexGroup>
                <EuiSpacer
                  size="l"
                />
              </React.Fragment>,
              "title": "Create roles",
            },
            Object {
              "children": <React.Fragment>
                <EuiText
                  color="subdued"
                  size="s"
                >
                  After a user successfully authenticates, the security plugin retrieves that user’s roles. You can map roles directly to users, but you can also map them to backend roles.
                   
                  <ExternalLink
                    href="https://opensearch.org/docs/latest/security-plugin/access-control/users-roles/#map-users-to-roles"
                  />
                </EuiText>
                <EuiSpacer
                  size="m"
                />
                <EuiFlexGroup
                  gutterSize="s"
                >
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="map-users-to-role"
                      fill={true}
                      onClick={[Function]}
                    >
                      Map users to a role
                    </EuiButton>
                  </EuiFlexItem>
                  <EuiFlexItem
                    grow={false}
                  >
                    <EuiButton
                      data-test-subj="create-internal-user"
                      onClick={[Function]}
                    >
                      Create internal user
                    </EuiButton>
                  </EuiFlexItem>
                </EuiFlexGroup>
              </React.Fragment>,
              "title": "Map users",
            },
          ]
        }
      />
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Configure audit logs
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Audit logs let you track user access to your OpenSearch cluster and are useful for compliance purposes."
            id="audit.logs.introduction"
            values={Object {}}
          />
           
          <ExternalLink
            href="https://opensearch.org/docs/latest/security-plugin/audit-logs/"
          />
        </p>
        <EuiButton
          data-test-subj="review-audit-log-configuration"
          fill={true}
          onClick={[Function]}
        >
          Review Audit Log Configuration
        </EuiButton>
      </EuiText>
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Purge cache
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          By default, the security plugin caches authenticated users, along with their roles and permissions. This option will purge cached users, roles and permissions.
        </p>
        <EuiButton
          fill={true}
          iconType="refresh"
          onClick={[Function]}
        >
          Purge cache
        </EuiButton>
      </EuiText>
    </EuiPanel>
    <EuiSpacer
      size="l"
    />
    <EuiPanel
      paddingSize="l"
    >
      <EuiTitle
        size="s"
      >
        <h3>
          Optional: Multi-tenancy
        </h3>
      </EuiTitle>
      <EuiText
        color="subdued"
        size="s"
      >
        <p>
          By default tenancy is activated in Dashboards. Tenants in OpenSearch Dashboards are spaces for saving index patterns, visualizations, dashboards, and other OpenSearch Dashboards objects.
        </p>
        <EuiFlexGroup
          gutterSize="s"
        >
          <EuiFlexItem
            grow={false}
          >
            <EuiButton
              fill={true}
              onClick={[Function]}
            >
              Manage Multi-tenancy
            </EuiButton>
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <EuiButton
              onClick={[Function]}
            >
              Configure Multi-tenancy
            </EuiButton>
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiText>
    </EuiPanel>
  </div>
</Fragment>
`;
